src/test/resources/testcases/invalid/functions/int_func_no_return.tc
int foo(int x) {
    if (x > 0) {
        return 1;
    }
    // Missing return in else path
}
int main() {
    return foo(5);
}
